--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ hr {
     background-color: #222;
 }
 
-#d1, #d2 {
+#d1, #d2, code {
     display: block;
     margin: 15px auto;
     border-left: 3px solid red;
@@ -42,7 +42,6 @@ hr {
     word-wrap: break-word;
     overflow: hidden;
     border-radius: 0 10px 10px 0;
-    cursor: pointer;
     font-family: var(--font-psw);
     font-size: 1.24em;
     letter-spacing: 1px;
@@ -54,4 +53,11 @@ hr {
 
 label {
     margin-top: 15px;
+}
+
+code {
+    border: none;
+    border-radius: 10px;
+    font-size: 12px;
+    letter-spacing: normal;
 }
